--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,7 @@
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
       "purpose": "any maskable"
     }
   ],
